<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageContainer"
            app:layout_constraintDimensionRatio="w,1:1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#ECE8E8"
            >

        <FrameLayout
                android:id="@+id/autumnFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/springFrame"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/winterFrame">

            <ImageView
                    android:id="@+id/autumnIv"
                    android:src="@mipmap/autumn"
                    style="@style/season_image_style"
                    android:transitionName="shared_image"/>

            <TextView
                    style="@style/season_textview_style"
                    android:textColor="@color/colorAccent"
                    android:text="@string/autumn"/>
        </FrameLayout>

        <FrameLayout
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/springFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/summerFrame"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/autumnFrame">

            <ImageView
                    style="@style/season_image_style"
                    android:id="@+id/springIv"
                    android:src="@mipmap/spring"
                    android:transitionName="shared_image"/>

            <TextView
                    style="@style/season_textview_style"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:text="@string/spring"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/summerFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/springFrame"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/winterFrame">

            <ImageView
                    style="@style/season_image_style"
                    android:id="@+id/summerIv"
                    android:src="@mipmap/summer"
                    android:transitionName="shared_image"/>

            <TextView
                    style="@style/season_textview_style"
                    android:textColor="@color/colorAccent"
                    android:text="@string/summer"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/winterFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summerFrame"
                app:layout_constraintStart_toEndOf="@+id/autumnFrame"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/main_season_layout_bg">

            <ImageView
                    style="@style/season_image_style"
                    android:id="@+id/winterIv"
                    android:src="@mipmap/winter"
                    android:transitionName="shared_image"/>

            <TextView
                    style="@style/season_textview_style"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/winter"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintTop_toBottomOf="@+id/imageContainer"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:id="@+id/contentContainer">

        <TextView
                android:textSize="@dimen/main_desc_textsize"
                android:textStyle="bold"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="@dimen/main_desc_text_height"
                android:id="@+id/descriptionTv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>

        <Button
                android:text="@string/go_to_list"
                android:padding="@dimen/default_margin"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goButton"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTv"
                android:layout_marginBottom="@dimen/default_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/default_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>